Fix inconsistent alignment of buttons in viewport

--- a/src/index.css
+++ b/src/index.css
@@ -743,8 +743,8 @@ footer a {
 
   position: absolute;
   z-index: 3;
-  top: 16px;
-  right: 52px;
+  top: 28px;
+  right: 28px;
 
   display: flex;
   gap: 6px;
